[gd_scene load_steps=17 format=3 uid="uid://r3l7flnqb5wq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5ni8o"]
[ext_resource type="Texture2D" uid="uid://7ndpj8vda888" path="res://assets/objects/player.png" id="2_gcgc6"]
[ext_resource type="PackedScene" uid="uid://cjuekjs8vop3q" path="res://assets/components/Controller.tscn" id="4_i3jf3"]
[ext_resource type="PackedScene" uid="uid://jbx0yqr6gwdv" path="res://assets/components/enhanced_attributes.tscn" id="5_8v1cs"]
[ext_resource type="PackedScene" uid="uid://jr3ly1tjpjhp" path="res://assets/components/engine_info.tscn" id="6_thqr0"]
[ext_resource type="PackedScene" uid="uid://c31htccccdc1g" path="res://assets/components/stats.tscn" id="7_dol6k"]
[ext_resource type="PackedScene" uid="uid://denul1ebukliu" path="res://assets/components/inventory_manager.tscn" id="8_kdygk"]
[ext_resource type="PackedScene" uid="uid://xrdvhuuqpbdf" path="res://assets/components/inventory_viewport.tscn" id="8_rq083"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5o1y"]
size = Vector2(0.909091, 2.13793)

[sub_resource type="Animation" id="Animation_la6e3"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_nu2o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l3m78"]
resource_name = "Swing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_q0qej"]
resource_name = "Walk-Forward"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 3, 4, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5galq"]
_data = {
"Idle": SubResource("Animation_la6e3"),
"RESET": SubResource("Animation_nu2o0"),
"Swing": SubResource("Animation_l3m78"),
"Walk-Forward": SubResource("Animation_q0qej")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wkmdk"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lud6u"]
graph_offset = Vector2(-339, -20)
nodes/Animation/node = SubResource("AnimationNodeAnimation_wkmdk")
nodes/Animation/position = Vector2(120, 140)
node_connections = [&"output", 0, &"Animation"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("stats", "attributes", "engine_info", "inventory_manager") groups=["Player"]]
script = ExtResource("1_5ni8o")
stats = NodePath("Stats")
attributes = NodePath("EnhancedAttributes")
engine_info = NodePath("EngineInfo")
inventory_manager = NodePath("InventoryManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.499999, 0.5)
scale = Vector2(16.5, 14.5)
shape = SubResource("RectangleShape2D_t5o1y")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
zoom = Vector2(3.955, 3.955)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gcgc6")
hframes = 3
vframes = 3
metadata/_edit_lock_ = true

[node name="Equipment" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5galq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5galq")
}
tree_root = SubResource("AnimationNodeBlendTree_lud6u")
anim_player = NodePath("../AnimationPlayer")

[node name="Controller" parent="." instance=ExtResource("4_i3jf3")]

[node name="EnhancedAttributes" parent="." instance=ExtResource("5_8v1cs")]
stamina = 100
mana = 100
speed = 300.0
base_reach = 40.0
health = 100
object_name = "Player"

[node name="EngineInfo" parent="." instance=ExtResource("6_thqr0")]
asset_path = "res://assets/objects/player.tscn"

[node name="Stats" parent="." instance=ExtResource("7_dol6k")]

[node name="InventoryManager" parent="." instance=ExtResource("8_kdygk")]
max_backpack_size = 100

[node name="PlayerViewport" type="CanvasLayer" parent="."]

[node name="InventoryViewport" parent="PlayerViewport" instance=ExtResource("8_rq083")]
visible = false
